src/objects/TimeManagement__c.object
<CustomObject>
    <fields>
        <fullName>WorkBeginTimeHM__c</fullName>
        <label>出勤時刻</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>00:00</fullName>
                </value>
                <value>
                    <fullName>00:10</fullName>
                </value>
                <value>
                    <fullName>00:20</fullName>
                </value>
                <value>
                    <fullName>00:30</fullName>
                </value>
                <value>
                    <fullName>00:40</fullName>
                </value>
                <value>
                    <fullName>00:50</fullName>
                </value>
                <value>
                    <fullName>01:00</fullName>
                </value>
                <value>
                    <fullName>01:10</fullName>
                </value>
                <value>
                    <fullName>01:20</fullName>
                </value>
                <value>
                    <fullName>01:30</fullName>
                </value>
                <value>
                    <fullName>01:40</fullName>
                </value>
                <value>
                    <fullName>01:50</fullName>
                </value>
                <value>
                    <fullName>02:00</fullName>
                </value>
                <value>
                    <fullName>02:10</fullName>
                </value>
                <value>
                    <fullName>02:20</fullName>
                </value>
                <value>
                    <fullName>02:30</fullName>
                </value>
                <value>
                    <fullName>02:40</fullName>
                </value>
                <value>
                    <fullName>02:50</fullName>
                </value>
                <value>
                    <fullName>03:00</fullName>
                </value>
                <value>
                    <fullName>03:10</fullName>
                </value>
                <value>
                    <fullName>03:20</fullName>
                </value>
                <value>
                    <fullName>03:30</fullName>
                </value>
                <value>
                    <fullName>03:40</fullName>
                </value>
                <value>
                    <fullName>03:50</fullName>
                </value>
                <value>
                    <fullName>04:00</fullName>
                </value>
                <value>
                    <fullName>04:10</fullName>
                </value>
                <value>
                    <fullName>04:20</fullName>
                </value>
                <value>
                    <fullName>04:30</fullName>
                </value>
                <value>
                    <fullName>04:40</fullName>
                </value>
                <value>
                    <fullName>04:50</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WorkBeginTime__c</fullName>
        <label>出勤時間</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>WorkDay__c</fullName>
        <label>勤怠日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>WorkEndTimeHM__c</fullName>
        <label>退勤時刻</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>00:00</fullName>
                </value>
                <value>
                    <fullName>00:10</fullName>
                </value>
                <value>
                    <fullName>00:20</fullName>
                </value>
                <value>
                    <fullName>00:30</fullName>
                </value>
                <value>
                    <fullName>00:40</fullName>
                </value>
                <value>
                    <fullName>00:50</fullName>
                </value>
                <value>
                    <fullName>01:00</fullName>
                </value>
                <value>
                    <fullName>01:10</fullName>
                </value>
                <value>
                    <fullName>01:20</fullName>
                </value>
                <value>
                    <fullName>01:30</fullName>
                </value>
                <value>
                    <fullName>01:40</fullName>
                </value>
                <value>
                    <fullName>01:50</fullName>
                </value>
                <value>
                    <fullName>02:00</fullName>
                </value>
                <value>
                    <fullName>02:10</fullName>
                </value>
                <value>
                    <fullName>02:20</fullName>
                </value>
                <value>
                    <fullName>02:30</fullName>
                </value>
                <value>
                    <fullName>02:40</fullName>
                </value>
                <value>
                    <fullName>02:50</fullName>
                </value>
                <value>
                    <fullName>03:00</fullName>
                </value>
                <value>
                    <fullName>03:10</fullName>
                </value>
                <value>
                    <fullName>03:20</fullName>
                </value>
                <value>
                    <fullName>03:30</fullName>
                </value>
                <value>
                    <fullName>03:40</fullName>
                </value>
                <value>
                    <fullName>03:50</fullName>
                </value>
                <value>
                    <fullName>04:00</fullName>
                </value>
                <value>
                    <fullName>04:10</fullName>
                </value>
                <value>
                    <fullName>04:20</fullName>
                </value>
                <value>
                    <fullName>04:30</fullName>
                </value>
                <value>
                    <fullName>04:40</fullName>
                </value>
                <value>
                    <fullName>04:50</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WorkEndTime__c</fullName>
        <label>退勤時間</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>WorkerName__c</fullName>
        <label>従業員名</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WorkerRef__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>従業員</label>
        <referenceTo>User</referenceTo>
        <relationshipName>WorkerRef</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WorksT__c</fullName>
        <description>(ps__MinuteSum__c- Mod(ps__MinuteSum__c,60))/60 + (ps__MinuteCalculate__c)/60</description>
        <formula>(MinuteSum__c)/60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>労働時間数</inlineHelpText>
        <label>勤務時間数(時)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>勤怠管理</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>WorkDay__c</columns>
        <columns>WorkerRef__c</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
        <language>ja</language>
    </listViews>
    <nameField>
        <displayFormat>TIME_{YYYYMMDD}_{0000000000}</displayFormat>
        <label>勤怠管理番号</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>TimeManageUpdateCheck</fullName>
        <active>false</active>
        <description>勤務情報の承認ステータスが「承認済み」以外の場合、修正を禁止します。</description>
        <errorConditionFormula>AND 
( 
OR(ISPICKVAL( Status__c , &quot;申請前&quot;),ISPICKVAL( Status__c , &quot;承認待ち&quot;), ISPICKVAL( Status__c , &quot;却下&quot;)), 
OR(ISCHANGED(WorkBeginTime__c),ISCHANGED(WorkBeginTimeHM__c),ISCHANGED(WorkEndTime__c),ISCHANGED(WorkEndTimeHM__c),ISCHANGED(OutingTime__c),ISCHANGED(OutingTimeHM__c),ISCHANGED(OutingTime2__c),ISCHANGED(OutingTime2HM__c),ISCHANGED(OutingTime3__c),ISCHANGED(OutingTime3HM__c),ISCHANGED(EnteringTime__c),ISCHANGED(EnteringTimeHM__c),ISCHANGED(EnteringTime2__c),ISCHANGED(EnteringTime2HM__c),ISCHANGED(EnteringTime3__c),ISCHANGED(EnteringTime3HM__c)) 
)</errorConditionFormula>
        <errorMessage>勤務情報の修正には上司に承認をもらえないといけないです、「承認申請」ボタンをクリックしてください。</errorMessage>
    </validationRules>
</CustomObject>